# src/routes/cat.route.ts
@@ -7,6 +7,7 @@ import {
   deleteById,
   deleteMany,
   update,
+  file
 } from "../controllers/cat.controller.ts";
 import * as auth from "../middleware/authorization.middleware.ts";
 import * as rate from "../middleware/rateLimit.middleware.ts";
@@ -14,11 +15,12 @@ import * as rate from "../middleware/rateLimit.middleware.ts";
 let router = express.Router();
 
 let catRoute = (app: any) => {
-  router.get("/", rate.cat,  auth.authorizations, findAll);
+  router.get("/", rate.cat,  findAll);
   router.get("/:id", rate.cat, auth.authorizations, findById);
   router.post("/", rate.cat, auth.authorizations, create);
   router.delete("/:id", rate.cat, auth.authorizations, deleteById);
   router.put("/:id", rate.cat, auth.authorizations, update);
+  router.post("/file", file);
   return app.use("/api/cat", router);
 };
 
